# tokstat

./: .gitignore  ADDING_PROVIDERS.md  AGENTS.md  CHANGELOG.md  COMPLETIONS.md  Cargo.toml  FINAL_SUMMARY.md  INSTALL.md  PROJECT.md  QUICKSTART.md  README.md  SHELL_COMPLETION_FEATURE.md  SUMMARY.md  build.sh  devenv.nix  devenv.yaml  flake.nix  justfile  shell.nix
.github/workflows/: build.yml  release.yml
src/: main.rs
src/auth/: azure.rs  copilot.rs  mod.rs  openrouter.rs
src/providers/: azure.rs  copilot.rs  mod.rs  openrouter.rs
src/storage/: mod.rs
src/ui/: dashboard.rs
