[package]
name = "tokstat"
version = "0.2.0"
edition = "2021"
authors = ["pbek"]
description = "A beautiful CLI application to monitor token quotas across multiple AI providers"
license = "MIT"

[[bin]]
name = "tokstat"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"

# Terminal colors
colored = "2.1"
atty = "0.2"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security & Credentials
keyring = "2.3"
aes-gcm = "0.10"
rand = "0.8"

# OAuth
oauth2 = "4.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI components
tui-input = "0.8"

# URL parsing
url = "2.5"

# Base64 encoding
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
